Multiple fixes to spec creation
- fix the calibration mapping for the validation notebook
- fix the notebook to create ground truth for leg by:
    - adding multiple examples of methods to find the trajectories
    - fixed the mapping to the new format
- fix the spec
    - change the 52 bus stop polygon to match
    - fix the polygon for the foothill bus stop to not overlap the trajectory
    - fix the trajectory of the foothill walk to avoid repeated points
    - fix the formatting of other polygons to not be as verbose

--- a/spec_creation/create_ground_truth_for_legs.ipynb
+++ b/spec_creation/create_ground_truth_for_legs.ipynb
@@ -62,7 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polyline as pl"
+    "import polyline as pl\n",
+    "import json"
    ]
   },
   {
@@ -99,19 +100,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_marker(loc, disp_color):\n",
+    "def get_one_marker(loc, disp_color):\n",
     "    if loc[\"geometry\"][\"type\"] == \"Point\":\n",
     "        curr_latlng = lonlat_swap(loc[\"geometry\"][\"coordinates\"])\n",
     "        return folium.Marker(curr_latlng, icon=folium.Icon(color=disp_color),\n",
     "                  popup=\"%s\" % loc[\"properties\"][\"name\"])\n",
     "    elif loc[\"geometry\"][\"type\"] == \"Polygon\":\n",
-    "        print(\"Checking %s\" % loc[\"geometry\"][\"coordinates\"])\n",
     "        assert len(loc[\"geometry\"][\"coordinates\"]) == 1,\\\n",
     "            \"Only simple polygons supported!\"\n",
     "        curr_latlng = [lonlat_swap(c) for c in loc[\"geometry\"][\"coordinates\"][0]]\n",
-    "        print(\"Returning polygon for %s\" % curr_latlng)\n",
-    "        return folium.Polygon(curr_latlng, color=disp_color, fill=disp_color,\n",
-    "                  popup=\"%s\" % loc[\"properties\"][\"name\"])        "
+    "        # print(\"Returning polygon for %s\" % curr_latlng)\n",
+    "        return folium.PolyLine(curr_latlng, color=disp_color, fill=disp_color,\n",
+    "                  popup=\"%s\" % loc[\"properties\"][\"name\"])"
    ]
   },
   {
@@ -120,23 +120,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_map_for_evaluation_trip(trip):\n",
+    "def get_marker(loc, disp_color):\n",
+    "    if type(loc) == list:\n",
+    "        return [get_one_marker(l, disp_color) for l in loc]\n",
+    "    else:\n",
+    "        print(\"Found single entry, is this expected?\")\n",
+    "        return [get_one_marker(loc, disp_color)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_waypoint_markers(waypoint_coords, curr_map):\n",
+    "    for i, wpc in enumerate(waypoint_coords[\"geometry\"][\"coordinates\"]):\n",
+    "        folium.map.Marker(\n",
+    "            lonlat_swap(wpc), popup=\"%d\" % i,\n",
+    "            icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
+    "\n",
+    "def get_map_for_travel_leg(trip):\n",
     "    curr_map = folium.Map()\n",
-    "    get_marker(trip[\"start_loc\"], \"green\").add_to(curr_map)\n",
-    "    get_marker(trip[\"end_loc\"], \"red\").add_to(curr_map)\n",
-    "    # trips from relations won't have waypoints\n",
-    "    if \"waypoint_coords\" in trip:\n",
-    "        for i, wpc in enumerate(trip[\"waypoint_coords\"][\"geometry\"][\"coordinates\"]):\n",
-    "            folium.map.Marker(\n",
-    "                lonlat_swap(wpc), popup=\"%d\" % i,\n",
-    "                icon=fof.DivIcon(class_name='leaflet-div-icon')).add_to(curr_map)\n",
-    "    print(\"Found %d coordinates for the route\" % (len(trip[\"route_coords\"])))\n",
-    "    latlng_route_coords = [lonlat_swap(rc) for rc in trip[\"route_coords\"][\"geometry\"][\"coordinates\"]]\n",
-    "    folium.PolyLine(latlng_route_coords,\n",
-    "                    popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
-    "    for i, c in enumerate(latlng_route_coords):\n",
-    "        folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
-    "    curr_map.fit_bounds(ful.get_bounds(trip[\"route_coords\"][\"geometry\"][\"coordinates\"], lonlat=True))    \n",
+    "    # print([loc for loc in trip[\"start_loc\"]])\n",
+    "    print([loc for loc in trip[\"end_loc\"]])\n",
+    "    [get_one_marker(loc, \"green\").add_to(curr_map) for loc in trip[\"start_loc\"]]\n",
+    "    [get_one_marker(loc, \"red\").add_to(curr_map) for loc in trip[\"end_loc\"]]\n",
+    "    \n",
+    "    # iterate over all reroutes\n",
+    "    for rc in trip[\"route_coords\"]:\n",
+    "        coords = rc[\"geometry\"][\"coordinates\"]\n",
+    "        print(\"Found %d coordinates for the route\" % (len(coords)))\n",
+    "        \n",
+    "        latlng_coords = [lonlat_swap(c) for c in coords]\n",
+    "        folium.PolyLine(latlng_coords, popup=\"%s: %s\" % (trip[\"mode\"], trip[\"name\"])).add_to(curr_map)\n",
+    "        \n",
+    "        for i, c in enumerate(latlng_coords):\n",
+    "            folium.CircleMarker(c, radius=5, popup=\"%d: %s\" % (i, c)).add_to(curr_map)\n",
+    "            \n",
+    "        curr_map.fit_bounds(ful.get_bounds(latlng_coords))\n",
+    "    \n",
+    "    return curr_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_map_for_shim_leg(trip):\n",
+    "    curr_map = folium.Map()\n",
+    "    for loc in trip[\"loc\"]:\n",
+    "        mkr = get_one_marker(loc, \"purple\")\n",
+    "        mkr.add_to(curr_map)\n",
+    "        curr_map.fit_bounds(mkr.get_bounds())\n",
     "    return curr_map"
    ]
   },
@@ -147,11 +185,47 @@
     "# This is the important part\n",
     "\n",
     "Instructions:\n",
-    "- Edit the cell below to include the spec that you are experimenting with\n",
+    "- Experiment with methods to generate start and end polygons or polylines (either here or using http://geojson.io or https://open-polyline-decoder.60devs.com/)\n",
+    "- Edit the cell below and use them to create a spec leg\n",
     "- Run the cells below that to fill it in and display it\n",
     "- Tweak the various fill/population methods until the trip looks right\n",
-    "- Copy/paste the leg spec into your spec file\n",
+    "- The leg is saved to a file (`/tmp/curr_leg.json`) every time\n",
+    "- Once the leg is final, include the text *in the file* into your spec\n",
+    "- DO NOT copy and paste directly from the notebook; the JSON can be finicky about the formatting\n",
     "- Rinse and repeat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Option 1: Using an OSM relation and a start and end node\n",
+    "\n",
+    "Used to create the bus route in the sample spec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Using a public transit relation and start and end stops from OSM\n",
+    "# This is the 52 bus line from El Camino/Castro to Foothill College\n",
+    "route_coords = aes.get_coords_for_relation(rid=9937346, start_node=6703651466, end_node=343648647)\n",
+    "pl.encode(route_coords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Option 2a: Using OSRM with OSM nodes\n",
+    "\n",
+    "- Used to create the walking route in the sample spec (to bus stop and from bus stop)\n",
+    "- The Foothill version was post-edited with geojson.io since OSRM persisted in doubling back"
    ]
   },
   {
@@ -160,42 +234,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curr_leg_spec = \\\n",
-    "        {\n",
-    "            \"id\": \"unexpected_bike_to_bus\",\n",
-    "            \"name\": \"Bike to bus when stop changed due to Thursday night live\",\n",
-    "            \"mode\": \"BICYCLING\",\n",
-    "            \"start_loc\": {\n",
-    "                \"osm_id\": 6129383336,\n",
-    "                \"name\": \"Mountain View City Hall\"\n",
-    "            },\n",
-    "            \"end_loc\": {\n",
-    "                \"osm_id\": 726963272,\n",
-    "                \"name\": \"El Camino and Miramonte (alternate stop)\"                \n",
-    "            },\n",
-    "            \"waypoint_coords\": [\n",
-    "          [\n",
-    "            -122.0817732810974,\n",
-    "            37.38932665304395\n",
-    "          ],\n",
-    "          [\n",
-    "            -122.08233386278151,\n",
-    "            37.38833995211305\n",
-    "          ],\n",
-    "          [\n",
-    "            -122.08664685487746,\n",
-    "            37.39046251514165\n",
-    "          ],\n",
-    "          [\n",
-    "            -122.08813816308974,\n",
-    "            37.38838683668442\n",
-    "          ],\n",
-    "          [\n",
-    "            -122.08862364292143,\n",
-    "            37.38818438037076\n",
-    "          ]\n",
-    "            ]\n",
-    "        }"
+    "t = {\n",
+    "    \"mode\": \"WALKING\", # or CAR, BICYCLING or BUS\n",
+    "    \"route_waypoints\": [6426801140, 2338378009, 2338378003]\n",
+    "}\n",
+    "route_coords = aes.get_route_from_osrm(t, start_coords=aes.node_to_geojson_coords(5301175134), end_coords=aes.node_to_geojson_coords(2161940025))\n",
+    "pl.encode(route_coords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example of re-encoding the polyline after editing\n",
+    "\n",
+    "- Copy paste the old coords into geojson.io\n",
+    "- edit\n",
+    "- paste the new coords back here\n",
+    "- encode into the new polyline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [lonlat_swap(c) for c in route_coords]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_coords = []\n",
+    "# pl.encode([lonlat_swap(c) for c in new_coords])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Option 2b: Using OSRM with coordinate waypoints\n",
+    "\n",
+    "Used to create the car trip in the sample spec\n",
+    "- use geojson.io to find start and end points in the polygon \n",
+    "- use geojson.io to create the waypoint linestring\n",
+    "\n",
+    "Post-edited in geojson.io to avoid weird routing with OSRM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = {\n",
+    "    \"mode\": \"CAR\", # or CAR, BICYCLING or BUS\n",
+    "    \"waypoint_coords\":     \n",
+    "    {\n",
+    "      \"type\": \"Feature\",\n",
+    "      \"properties\": {},\n",
+    "      \"geometry\": {\n",
+    "        \"type\": \"LineString\",\n",
+    "        \"coordinates\": [\n",
+    "          [-122.09133803844452, 37.37410486690446],\n",
+    "          [-122.08707869052887, 37.374087814725534],\n",
+    "          [-122.08697140216826, 37.3750235473139],\n",
+    "          [-122.08697944879532, 37.3772040360451],\n",
+    "          [-122.08701968193054, 37.38092329624445],\n",
+    "          [-122.08611845970152, 37.38176942882687]\n",
+    "        ]\n",
+    "      }\n",
+    "    }\n",
+    "}\n",
+    "start_lonlat = [-122.13025152683258, 37.35973490013966]\n",
+    "end_lonlat = [-122.08356499671936, 37.39037087962563]\n",
+    "route_coords = aes.get_route_from_osrm(t, start_coords=start_lonlat, end_coords=end_lonlat)\n",
+    "pl.encode(route_coords)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tweak if needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [lonlat_swap(c) for c in route_coords]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new_coords = []\n",
+    "# pl.encode([lonlat_swap(c) for c in new_coords])"
    ]
   },
   {
@@ -213,69 +358,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curr_leg_spec = \\\n",
-    "{\n",
-    "                    \"id\": \"inner_suburb_downtown_walk\",\n",
-    "                    \"name\": \"Caltrain from SF to Mountain View\",\n",
-    "                    \"mode\": \"WALKING\",\n",
-    "                    \"start_loc\": {\n",
-    "                      \"type\": \"Feature\",\n",
-    "                      \"properties\": {\n",
-    "                        \"name\": \"Mountain View Transit Center\"\n",
-    "                      },\n",
-    "                      \"geometry\": {\n",
-    "                        \"type\": \"Polygon\",\n",
-    "                        \"coordinates\": [\n",
-    "                          [\n",
-    "                            [ -122.07675218582153, 37.39485875725021 ],\n",
-    "                            [ -122.0769828557968, 37.39444961714526 ],\n",
-    "                            [ -122.07471370697021, 37.3936355921696 ],\n",
-    "                            [ -122.074493765831, 37.39398080802943 ],\n",
-    "                            [ -122.07675218582153, 37.39485875725021 ]\n",
-    "                          ]\n",
-    "                        ]\n",
-    "                      }\n",
-    "                    },\n",
-    "                    \"end_loc\": {\n",
-    "                      \"type\": \"Feature\",\n",
-    "                      \"properties\": {\n",
-    "                        \"name\": \"Mountain View Library\"\n",
-    "                      },\n",
-    "                      \"geometry\": {\n",
-    "                        \"type\": \"Polygon\",\n",
-    "                        \"coordinates\": [\n",
-    "                          [\n",
-    "                            [ -122.08355963230133, 37.39091642895306 ],\n",
-    "                            [ -122.08428382873535, 37.38975713188671 ],\n",
-    "                            [ -122.08383858203888, 37.389573859018185 ],\n",
-    "                            [ -122.08340406417847, 37.390196132517175 ],\n",
-    "                            [ -122.08311975002289, 37.39012793841312 ],\n",
-    "                            [ -122.08280861377716, 37.390656441096894 ],\n",
-    "                            [ -122.08355426788331, 37.39096757399895 ],\n",
-    "                            [ -122.08355963230133, 37.39091642895306 ]\n",
-    "                          ]\n",
-    "                        ]\n",
-    "                      }\n",
-    "                    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "importlib.reload(aes)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "curr_leg_spec = aes.validate_and_fill_leg(curr_leg_spec)"
+    "## Spec we are working on"
    ]
   },
   {
@@ -284,18 +374,136 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# curr_leg_spec"
+    "curr_leg_spec = \\\n",
+    "{\n",
+    "                \"id\": \"campus_walk\",\n",
+    "                \"name\": \"Walk on the Foothill campus\",\n",
+    "                \"mode\": \"WALKING\",\n",
+    "                \"start_loc\": {\n",
+    "                    \"type\": \"Feature\",\n",
+    "                    \"properties\": {\n",
+    "                        \"name\": \"Foothill pool\"\n",
+    "                    },\n",
+    "                    \"geometry\": {\n",
+    "                        \"type\": \"Polygon\",\n",
+    "                        \"coordinates\": [\n",
+    "                            [\n",
+    "            [\n",
+    "              -122.12678946554661,\n",
+    "              37.3624887707069\n",
+    "            ],\n",
+    "            [\n",
+    "              -122.1268632262945,\n",
+    "              37.36245146328467\n",
+    "            ],\n",
+    "            [\n",
+    "              -122.12655209004879,\n",
+    "              37.362050140841276\n",
+    "            ],\n",
+    "            [\n",
+    "              -122.12643943727016,\n",
+    "              37.36215779992784\n",
+    "            ],\n",
+    "            [\n",
+    "              -122.12671637535095,\n",
+    "              37.36252447922224\n",
+    "            ],\n",
+    "            [\n",
+    "              -122.12678946554661,\n",
+    "              37.3624887707069\n",
+    "            ]\n",
+    "                            ]\n",
+    "                        ]\n",
+    "                    }\n",
+    "                },\n",
+    "                \"end_loc\": {\n",
+    "                    \"type\": \"Feature\",\n",
+    "                    \"properties\": {\n",
+    "                        \"name\": \"Foothill fountain\"\n",
+    "                    },\n",
+    "                    \"geometry\": {\n",
+    "                        \"type\": \"Polygon\",\n",
+    "                        \"coordinates\": [\n",
+    "                            [\n",
+    "                                [ -122.12924435734747, 37.36135941352246 ],\n",
+    "                                [ -122.12901771068573, 37.36108013616577 ],\n",
+    "                                [ -122.12868243455887, 37.361213379309085 ],\n",
+    "                                [ -122.12891444563866, 37.361499051811045 ],\n",
+    "                                [ -122.12924435734747, 37.36135941352246 ]\n",
+    "                            ]\n",
+    "                        ]\n",
+    "                    }\n",
+    "                },\n",
+    "                \"polyline\": \"mj`cFd{khVIHEGJIKHk@uAGOVQBFDHBHDH@BBFHRt@i@BFDHRRDDHFFJDJn@~AN`@L^_@Va@TOb@D\\\\Pb@JRF^Df@????f@xA????j@]ULUNg@yAEg@G_@KSQc@E]Nc@`@U^W\"\n",
+    "            }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write it out before filling it in"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "get_map_for_evaluation_trip(curr_leg_spec)"
+    "json.dump(curr_leg_spec, open(\"/tmp/curr_leg.json\", \"w\"), indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fill it in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curr_leg_spec = aes.validate_and_fill_leg(curr_leg_spec, \"2020-01-01\", \"2021-10-10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dump filled value to copy-paste into geojson.io as needed\n",
+    "# json.dumps(curr_leg_spec[\"route_coords\"][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validate it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_map_for_travel_leg(curr_leg_spec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Insert into spec\n",
+    "\n",
+    "- If everything looks good, insert the leg from `/tmp/curr_leg.json` into the spec\n",
+    "- If something looks wrong, keep tweaking"
    ]
   },
   {
@@ -337,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
