--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_to_validate = json.load(open(\"final_sfbayarea_filled_reroutes/train_bus_ebike_mtv_ucb.filled.reroute.json\"))\n",
+    "spec_to_validate = json.load(open(\"evaluation.spec.filled.json\"))\n",
     "sensing_configs = json.load(open(\"sensing_regimes.all.specs.json\"))"
    ]
   },
@@ -149,12 +149,13 @@
     "    curr_map = folium.Map()\n",
     "    if trip[\"start_loc\"] is None or trip[\"end_loc\"] is None:\n",
     "        return curr_map\n",
-    "    curr_start = lonlat_swap(trip[\"start_loc\"][\"coordinates\"])\n",
-    "    curr_end = lonlat_swap(trip[\"end_loc\"][\"coordinates\"])\n",
+    "    curr_start = lonlat_swap(trip[\"start_loc\"][\"geometry\"][\"coordinates\"])\n",
+    "    curr_end = lonlat_swap(trip[\"end_loc\"][\"geometry\"][\"coordinates\"])\n",
     "    folium.Marker(curr_start, icon=folium.Icon(color=\"green\"),\n",
-    "                  popup=\"Start: %s\" % trip[\"start_loc\"][\"name\"]).add_to(curr_map)\n",
+    "                  popup=\"Start: %s\" % trip[\"start_loc\"][\"properties\"][\"name\"]).add_to(curr_map)\n",
     "    folium.Marker(curr_end, icon=folium.Icon(color=\"red\"),\n",
-    "                  popup=\"End: %s\" % trip[\"end_loc\"][\"name\"]).add_to(curr_map)\n",
+    "                  popup=\"End: %s\" % trip[\"end_loc\"][\"properties\"][\"name\"]).add_to(curr_map)\n",
+    "\n",
     "    folium.PolyLine([curr_start, curr_end], popup=trip[\"id\"]).add_to(curr_map)\n",
     "    curr_map.fit_bounds([curr_start, curr_end])    \n",
     "    return curr_map"
@@ -304,7 +305,7 @@
     "            \n",
     "            # points within polygons are contiguous\n",
     "            max_index_diff_start = pd.Series(start_contains[start_contains == True].index).diff().max()\n",
-    "            assert pd.isnull(max_index_diff_start) or max_index_diff_start == 1, \"Max diff in index = %s for points %s\" % (gpd.GeoSeries(start_contains[end_contains == True].index).diff().max(), points.head())\n",
+    "            assert pd.isnull(max_index_diff_start) or max_index_diff_start == 1, \"Max diff in index = %s for points %s\" % (gpd.GeoSeries(start_contains[start_contains == True].index).diff().max(), points.head())\n",
     "            \n",
     "        for el in end_locs:\n",
     "            end_contains = points.apply(lambda p: el.contains(p))\n",
