Fix the duplicate checking
so that it doesn't report errors if all entries between the duplicates are also
duplicates.

Concretely, if entries 31,32 and 33 are all duplicates, the previous code would
have returned an error.  But it is not really an error, since there would not
be any zigzag, just repeated points. This checks the intermediate points to see
if they are identical as well by adding an addition `for` loop.

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -372,6 +372,9 @@
    "source": [
     "REL_TOL = 1e-5\n",
     "\n",
+    "def is_coords_equal(c1, c2):\n",
+    "    return abs(c2[0] - c1[0]) < REL_TOL and abs(c2[1] - c1[1]) < REL_TOL\n",
+    "\n",
     "for t in evaluation_trips:\n",
     "    for l in t[\"legs\"]:\n",
     "        if l[\"type\"] == \"TRAVEL\":\n",
@@ -381,8 +384,15 @@
     "                    c1 = rc[\"geometry\"][\"coordinates\"][i]\n",
     "                    for j in range(i + 1, len(rc[\"geometry\"][\"coordinates\"])):\n",
     "                        c2 = rc[\"geometry\"][\"coordinates\"][j]\n",
-    "                        if j - i > 1 and abs(c2[0] - c1[0]) < REL_TOL and abs(c2[1] - c1[1]) < REL_TOL:\n",
-    "                            print(f\"\\tDuplicates {c1}, {c2} found @ indices {i}, {j}\")"
+    "                        if is_coords_equal(c1, c2):\n",
+    "                            # print(f\"Found duplicate entry, checking entries {i}...{j}\")\n",
+    "                            not_matched_index = -1\n",
+    "                            for k in range(i, j+1):\n",
+    "                                c3 = rc[\"geometry\"][\"coordinates\"][k]\n",
+    "                                if not is_coords_equal(c1, c3):\n",
+    "                                    not_matched_index = k\n",
+    "                            if not_matched_index != -1:\n",
+    "                                assert False, (f\"\\tDuplicates {c1}, {c2} found @ indices {i}, {j} with non-duplicate {not_matched_index} in between\")"
    ]
   },
   {
