fix wait_for_city_bus_short shim leg

--- a/spec_creation/Validate_spec_before_upload.ipynb
+++ b/spec_creation/Validate_spec_before_upload.ipynb
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spec_to_validate = json.load(open(\"evaluation.spec.filled.json\"))\n",
+    "spec_to_validate = json.load(open(\"final_sfbayarea_filled_reroutes/train_bus_ebike_mtv_ucb.filled.reroute.json\"))\n",
     "sensing_configs = json.load(open(\"sensing_regimes.all.specs.json\"))"
    ]
   },
@@ -422,7 +422,7 @@
     "        assert (ts1 := r[1]) <= (ts2 := ranges[i + 1][0]), f\"Overlapping timestamps: {arrow.get(ts1)}, {arrow.get(ts2)}\"\n",
     "\n",
     "\n",
-    "breaking_example = [\n",
+    "invalid_ranges = [\n",
     "    {\n",
     "        \"properties\": {\n",
     "            \"valid_start_ts\": arrow.get(\"2020-01-01\").timestamp,\n",
@@ -438,7 +438,7 @@
     "]\n",
     "\n",
     "try:\n",
-    "    check_overlaps(breaking_example)\n",
+    "    check_overlaps(invalid_ranges)\n",
     "except AssertionError as e:\n",
     "    print(e)"
    ]
