fully working FileSpecDetails

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -75,6 +75,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arrow"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -89,9 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
+    "DATASTORE_URL = \"bin/data\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sd = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
+    "sd = eisd.FileSpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
    ]
   },
   {
@@ -139,13 +148,13 @@
     "        for r in phone_detail_map[\"evaluation_ranges\"]:\n",
     "            print(8 * ' ', 30 * \"=\")\n",
     "            print(8 * ' ',r.keys())\n",
-    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
-    "            for tr in r[\"evaluation_trip_ranges\"]:\n",
-    "                print(12 * ' ', 30 * \"-\")\n",
-    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
-    "                for sr in tr[\"evaluation_section_ranges\"]:\n",
-    "                    print(16 * ' ', 30 * \"~\")\n",
-    "                    print(16 * ' ',sr[\"trip_id\"], sr.keys())"
+    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]), arrow.get(r[\"start_ts\"]))\n",
+    "            #for tr in r[\"evaluation_trip_ranges\"]:\n",
+    "            #    print(12 * ' ', 30 * \"-\")\n",
+    "            #    print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
+    "            #    for sr in tr[\"evaluation_section_ranges\"]:\n",
+    "            #        print(16 * ' ', 30 * \"~\")\n",
+    "            #        print(16 * ' ',sr[\"trip_id\"], sr.keys())"
    ]
   },
   {
@@ -160,7 +169,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ev = eiev.EvaluationView()\n",
@@ -240,7 +251,8 @@
     "                print(12 * ' ', 30 * \"-\")\n",
     "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
     "                # I am not printing the actual trajectories since that would be too long, only displaying modes\n",
-    "                gt_trip = sd.get_ground_truth_for_trip(tr[\"trip_id_base\"])\n",
+    "                print(tr)\n",
+    "                gt_trip = sd.get_ground_truth_for_trip(tr[\"trip_id_base\"], tr[\"start_ts\"], tr[\"end_ts\"])\n",
     "                print(12 * ' ', eisd.SpecDetails.get_concat_trajectories(gt_trip)[\"properties\"])"
    ]
   },
