updated notebooks + incorporated changes on PR

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -98,9 +98,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"bin/data\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sd = eisd.FileSpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
+    "\n",
+    "# If using ServerSpecDetails, data can alternatively be retrieved as such:\n",
+    "# DATASTORE_LOC = http://localhost:8080\n",
+    "# sd = eisd.ServerSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")\n",
+    "\n",
+    "# You must run `cd bin/ && python dump_data_to_file.py --spec-id train_bus_ebike_mtv_ucb`\n",
+    "# before using this notebook!\n",
+    "\n",
+    "DATASTORE_LOC = \"bin/data/\"\n",
+    "sd = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
    ]
   },
   {
