Restore full tree display

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -157,12 +157,12 @@
     "            print(8 * ' ', 30 * \"=\")\n",
     "            print(8 * ' ',r.keys())\n",
     "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]), arrow.get(r[\"start_ts\"]))\n",
-    "            #for tr in r[\"evaluation_trip_ranges\"]:\n",
-    "            #    print(12 * ' ', 30 * \"-\")\n",
-    "            #    print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
-    "            #    for sr in tr[\"evaluation_section_ranges\"]:\n",
-    "            #        print(16 * ' ', 30 * \"~\")\n",
-    "            #        print(16 * ' ',sr[\"trip_id\"], sr.keys())"
+    "            for tr in r[\"evaluation_trip_ranges\"]:\n",
+    "                print(12 * ' ', 30 * \"-\")\n",
+    "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
+    "                for sr in tr[\"evaluation_section_ranges\"]:\n",
+    "                    print(16 * ' ', 30 * \"~\")\n",
+    "                    print(16 * ' ',sr[\"trip_id\"], sr.keys())"
    ]
   },
   {
