Add quotes around the `DATASTORE_LOC` as well

--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -101,7 +101,7 @@
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
     "\n",
     "# If using ServerSpecDetails, data can alternatively be retrieved as such:\n",
-    "# DATASTORE_LOC = http://localhost:8080\n",
+    "# DATASTORE_LOC = \"http://localhost:8080\"\n",
     "# sd = eisd.ServerSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")\n",
     "\n",
     "# You must run `cd bin/ && python dump_data_to_file.py --spec-id train_bus_ebike_mtv_ucb`\n",
