--- a/Evaluations_power_boxplots.ipynb
+++ b/Evaluations_power_boxplots.ipynb
@@ -88,11 +88,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
+    "DATASTORE_LOC = \"bin/data/\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sd_la = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")\n",
-    "sd_sj = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"car_scooter_brex_san_jose\")\n",
-    "sd_ucb = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
+    "sd_la = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"unimodal_trip_car_bike_mtv_la\")\n",
+    "sd_sj = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"car_scooter_brex_san_jose\")\n",
+    "sd_ucb = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ios_loc_entries = sd_sj.retrieve_data_from_server(\"ucb-sdb-ios-1\", [\"background/location\"],\n",
+    "ios_loc_entries = sd_sj.retrieve_data(\"ucb-sdb-ios-1\", [\"background/location\"],\n",
     "                                arrow.get(\"2019-08-07T14:50:57.445000-07:00\").timestamp,\n",
     "                                arrow.get(\"2019-08-07T15:00:16.787000-07:00\").timestamp)\n",
     "ios_location_df = pd.DataFrame([e[\"data\"] for e in ios_loc_entries])"
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "android_loc_entries = sd_sj.retrieve_data_from_server(\"ucb-sdb-android-1\", [\"background/location\"],\n",
+    "android_loc_entries = sd_sj.retrieve_data(\"ucb-sdb-android-1\", [\"background/location\"],\n",
     "                                arrow.get(\"2019-08-07T14:50:57.445000-07:00\").timestamp,\n",
     "                                arrow.get(\"2019-08-07T15:00:16.787000-07:00\").timestamp)\n",
     "android_location_df = pd.DataFrame([e[\"data\"] for e in android_loc_entries])"
