--- a/Data_exploration_template.ipynb
+++ b/Data_exploration_template.ipynb
@@ -75,6 +75,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import arrow"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -89,9 +98,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASTORE_URL = \"http://cardshark.cs.berkeley.edu\"\n",
     "AUTHOR_EMAIL = \"shankari@eecs.berkeley.edu\"\n",
-    "sd = eisd.SpecDetails(DATASTORE_URL, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
+    "\n",
+    "# If using ServerSpecDetails, data can alternatively be retrieved as such:\n",
+    "# DATASTORE_LOC = \"http://localhost:8080\"\n",
+    "# sd = eisd.ServerSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")\n",
+    "\n",
+    "# You must run `cd bin/ && python dump_data_to_file.py --spec-id train_bus_ebike_mtv_ucb`\n",
+    "# before using this notebook!\n",
+    "\n",
+    "DATASTORE_LOC = \"bin/data/\"\n",
+    "sd = eisd.FileSpecDetails(DATASTORE_LOC, AUTHOR_EMAIL, \"train_bus_ebike_mtv_ucb\")"
    ]
   },
   {
@@ -139,7 +156,7 @@
     "        for r in phone_detail_map[\"evaluation_ranges\"]:\n",
     "            print(8 * ' ', 30 * \"=\")\n",
     "            print(8 * ' ',r.keys())\n",
-    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]))\n",
+    "            print(8 * ' ',r[\"trip_id\"], r[\"eval_common_trip_id\"], r[\"eval_role\"], len(r[\"evaluation_trip_ranges\"]), arrow.get(r[\"start_ts\"]))\n",
     "            for tr in r[\"evaluation_trip_ranges\"]:\n",
     "                print(12 * ' ', 30 * \"-\")\n",
     "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
@@ -160,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ev = eiev.EvaluationView()\n",
@@ -240,7 +259,8 @@
     "                print(12 * ' ', 30 * \"-\")\n",
     "                print(12 * ' ',tr[\"trip_id\"], tr.keys())\n",
     "                # I am not printing the actual trajectories since that would be too long, only displaying modes\n",
-    "                gt_trip = sd.get_ground_truth_for_trip(tr[\"trip_id_base\"])\n",
+    "                print(tr)\n",
+    "                gt_trip = sd.get_ground_truth_for_trip(tr[\"trip_id_base\"], tr[\"start_ts\"], tr[\"end_ts\"])\n",
     "                print(12 * ' ', eisd.SpecDetails.get_concat_trajectories(gt_trip)[\"properties\"])"
    ]
   },
