recursively generate primary key

--- a/bin/Flatten_JSON_to_tabular.ipynb
+++ b/bin/Flatten_JSON_to_tabular.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "biblical-catalyst",
+   "id": "progressive-wages",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "external-ensemble",
+   "id": "gorgeous-receiver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "middle-mouth",
+   "id": "enormous-worse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,55 +38,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lovely-algeria",
+   "id": "union-pastor",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
+    "import pandas as pd\n",
     "\n",
-    "df_map = {}\n",
-    "primary_key = [\"spec_id\", \"phone_os\", \"phone_label\", \"start_ts\", \"end_ts\"]\n",
+    "def get_dfs(pv_map):\n",
+    "    \"\"\"\n",
+    "    Returns a dictionary consisting of versions of the dataframes in a\n",
+    "    PhoneView map with uniquely-identifiable (i.e. fully queryable) rows.\n",
+    "    \"\"\"\n",
+    "    df_map = {}\n",
+    "    pkey = set()\n",
+    "    \n",
+    "    def gen_pkey(node, curr_pkey):\n",
+    "        \"\"\"\n",
+    "        Creates the primary key set, which consists of the columnns that\n",
+    "        will be pre-pended to each dataframe to uniquely identify each row.\n",
+    "        These columnns correspond to the terminal nodes of the PhoneView map.\n",
+    "        \"\"\"\n",
+    "        for key, val in node.items():\n",
+    "            if isinstance(val, list):\n",
+    "                for e in val:\n",
+    "                    gen_pkey(e, curr_pkey)\n",
+    "            elif isinstance(val, dict):\n",
+    "                gen_pkey(val, curr_pkey)\n",
+    "            elif isinstance(val, pd.DataFrame):\n",
+    "                for col in val.columns.values:\n",
+    "                    if col in curr_pkey:\n",
+    "                        curr_pkey.remove(col)\n",
+    "                if key not in df_map:\n",
+    "                    df_map[key] = val\n",
+    "            else:\n",
+    "                curr_pkey.add(key)\n",
+    "    \n",
+    "    gen_pkey(pv_map, pkey)\n",
+    "    \n",
+    "    # TODO: figure out how to pre-pend rows to dataframes based on primary key\n",
+    "    \n",
+    "    # return df_map\n",
+    "    return pkey\n",
     "\n",
-    "for phone_os, phone_map in pv.map().items():\n",
-    "    for phone_label, phone_detail_map in phone_map.items():\n",
-    "        for ranges in [phone_detail_map[\"evaluation_ranges\"], phone_detail_map[\"calibration_ranges\"]]:\n",
-    "            for r in ranges:\n",
-    "                for key in [k for k in r.keys() if \"_df\" in k]:\n",
-    "                    # append \"primary key\" columns to df\n",
-    "                    row_vals = [\n",
-    "                        sd.CURR_SPEC_ID,\n",
-    "                        phone_os,\n",
-    "                        phone_label,\n",
-    "                        math.floor(r[\"start_ts\"]),\n",
-    "                        math.ceil(r[\"end_ts\"])]\n",
-    "                    \n",
-    "                    df = r[key].assign(**dict(zip(primary_key, row_vals)))\n",
-    "                    \n",
-    "                    # move \"primary key\" columns to front of df\n",
-    "                    df = df[primary_key + [c for c in df.columns.values if c not in primary_key]]\n",
-    "                    \n",
-    "                    # append rows to larger version of df\n",
-    "                    if key not in df_map:\n",
-    "                        df_map[key] = df\n",
-    "                    else:\n",
-    "                        df_map[key] = df_map[key].append(df, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "satisfied-correlation",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "from IPython.display import display\n",
-    "\n",
-    "# show fully flattened phone view data\n",
-    "for name, df in df_map.items():\n",
-    "    print(name)\n",
-    "    display(df)"
+    "get_dfs(pv.map())"
    ]
   }
  ],
