add current code

--- a/bin/Flatten_JSON_to_tabular.ipynb
+++ b/bin/Flatten_JSON_to_tabular.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "progressive-wages",
+   "id": "informational-robinson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "gorgeous-receiver",
+   "id": "known-george",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "enormous-worse",
+   "id": "stupid-opportunity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "union-pastor",
+   "id": "packed-august",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,18 +52,15 @@
     "    df_map = {}\n",
     "    pkey = set()\n",
     "    \n",
-    "    def gen_pkey(node, curr_pkey):\n",
+    "    def prepend_pkey(node, curr_pkey):\n",
     "        \"\"\"\n",
-    "        Creates the primary key set, which consists of the columnns that\n",
-    "        will be pre-pended to each dataframe to uniquely identify each row.\n",
-    "        These columnns correspond to the terminal nodes of the PhoneView map.\n",
     "        \"\"\"\n",
     "        for key, val in node.items():\n",
     "            if isinstance(val, list):\n",
     "                for e in val:\n",
-    "                    gen_pkey(e, curr_pkey)\n",
+    "                    prepend_pkey(e, curr_pkey)\n",
     "            elif isinstance(val, dict):\n",
-    "                gen_pkey(val, curr_pkey)\n",
+    "                prepend_pkey(val, curr_pkey)\n",
     "            elif isinstance(val, pd.DataFrame):\n",
     "                for col in val.columns.values:\n",
     "                    if col in curr_pkey:\n",
@@ -72,15 +69,29 @@
     "                    df_map[key] = val\n",
     "            else:\n",
     "                curr_pkey.add(key)\n",
+    "                for label in df_map:\n",
+    "                    if key not in df_map[label].columns.values:\n",
+    "                        df_map[label].assign(key=val)\n",
+    "                        print(f\"assigned {key=} to {label}\")\n",
     "    \n",
-    "    gen_pkey(pv_map, pkey)\n",
+    "    prepend_pkey(pv_map, pkey)\n",
     "    \n",
-    "    # TODO: figure out how to pre-pend rows to dataframes based on primary key\n",
-    "    \n",
-    "    # return df_map\n",
-    "    return pkey\n",
+    "    return df_map\n",
     "\n",
-    "get_dfs(pv.map())"
+    "df_map = get_dfs(pv.map())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "geological-easter",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for label, df in df_map.items():\n",
+    "    import IPython.display as display\n",
+    "    print(label)\n",
+    "    display(df.columns.values)"
    ]
   }
  ],
